[package]
name = "blogdb"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = [
    "json",
    "gzip",
    "brotli",
    "deflate",
    "stream",
] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11.5"
url = "2.2"
futures = "0.3"
num_cpus = "1.16.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rss = "2.0"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["full"] }
atom_syndication = "0.12.4"
warp = "0.3.7"

[[bin]]
name = "downloader"
path = "bin/downloader.rs"

[[bin]]
name = "processor"
path = "bin/processor.rs"

[[bin]]
name = "server"
path = "bin/server.rs"
